# revyu

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
src/feedy/: __init__.py  cli.py  git.py  llm.py  settings.py
src/revyu/: __init__.py  cli.py  git.py  settings.py
