[project]
name = "revyu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zak fama", email = "zak.fama@dhigroupinc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.2",
    "typer>=0.24.0",
]

[project.scripts]
revyu = "revyu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
